@startuml Diagrama de classes Nextar Backoffice


Store -- Invoice
Store -- User

class Store{
    Guid Id
    bool Active
    string Email        
    DateTime RegistredAt    
    Invoice[] Invoices
    User user
}

class Invoice{
    Guid Id
    DateTime RegistredAt
    DateTime PaiedAt
    DateTime ExpirationAt
    Decimal Amount
    Decimal Discount
}

class User{
    Guid Id
    bool Active
    string Email            
}
@enduml